--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <img src="../../../assets/img/404_img.svg" alt="404"/>
-  <p>お探しのページは見つかりませんでした。</p>
-  <a href="/">トップページへ戻る</a>
+  <p>{{ 'NotFound' | translate }}</p>
+  <a href="/">{{ 'ToTopPage' | translate }}</a>
 </div>
