--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -63,7 +63,7 @@
 
       </mat-nav-list>
       <mat-nav-list>
-        <div class='header'>その他</div>
+        <div class='header'>{{ 'Other' | translate }}</div>
         <mat-nav-list class="sub">
 
         </mat-nav-list>
