--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class='row'>
-    <span class='small'>年代は公表されます。設定は編集の生年月日で行います。</span>　
+    <span class='small'>{{ 'AgeAnnounced' | translate }}{{ 'SetBirthday' | translate }}</span>　
   </div>
 </div>
 
@@ -40,9 +40,9 @@
                 {{ "editCoverImage" | translate }}
               </button>
               <mat-menu #coverMenu="matMenu" xPosition="before">
-                <button mat-menu-item (click)="onClickCoverFileInputButton()"><mat-icon>photo</mat-icon>写真を選択する</button>
-                <button [disabled]="!data.coverFile" mat-menu-item (click)="onClickCropCover()"><mat-icon>crop</mat-icon>{{"Edit"|translate}}</button>
-                <button [disabled]="!data.coverFile" mat-menu-item (click)="onDeleteCoverFile()"><mat-icon>delete</mat-icon>削除する</button>
+                <button mat-menu-item (click)="onClickCoverFileInputButton()"><mat-icon>photo</mat-icon>{{ 'ImgSelected' | translate }}</button>
+                <button [disabled]="!data.coverFile" mat-menu-item (click)="onClickCropCover()"><mat-icon>crop</mat-icon>{{ "Edit" | translate }}</button>
+                <button [disabled]="!data.coverFile" mat-menu-item (click)="onDeleteCoverFile()"><mat-icon>delete</mat-icon>{{ 'DeletePlan' | translate }}</button>
               </mat-menu>
             </div>
             <div class="user">
@@ -65,9 +65,9 @@
                 {{ "SelectPhoto" | translate }}
               </button>
               <mat-menu #userMenu="matMenu" xPosition="before">
-                <button mat-menu-item (click)="onClickFileInputButton()"><mat-icon>photo</mat-icon>写真を選択する</button>
+                <button mat-menu-item (click)="onClickFileInputButton()"><mat-icon>photo</mat-icon>{{ 'ImgSelected' | translate }}</button>
                 <button mat-menu-item (click)="onClickCropUser()" [disabled]="!data.pictureFile"><mat-icon>crop</mat-icon>{{"Edit"|translate}}</button>
-                <button mat-menu-item (click)="onDeleteUserFile()" [disabled]="!data.pictureFile"><mat-icon>delete</mat-icon>削除する</button>
+                <button mat-menu-item (click)="onDeleteUserFile()" [disabled]="!data.pictureFile"><mat-icon>delete</mat-icon>{{ 'DeletePlan' | translate }}</button>
               </mat-menu>
             </div>
           </div>
@@ -199,7 +199,7 @@
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
             <!-- <mat-hint style="color: red;">&emsp;年代は公表されます</mat-hint> -->
-            <div class='hint-end'>年代は公表されます</div>
+            <div class='hint-end'>{{ 'AgeAnnounced' | translate }}</div>
           </mat-form-field>
         </mat-list-item>
         <mat-list-item class="bottom" *ngIf="!isPreview">
