--- a/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.html
+++ b/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title>リンク共有</h2>
-<p>このリンクを知っているユーザーとは、このプランの内容を共有できます。</p>
+<h2 mat-dialog-title>{{ 'ShareLink' | translate }}</h2>
+<p>{{ 'ShareLinkPlanContents' | translate }}</p>
 <mat-dialog-content>
   <div class="url">{{ data }}</div>
 </mat-dialog-content>
