--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -928,19 +928,20 @@ div.plandtl {
 
         .spot-image {
           position: relative;
-          height: 62.6vw;
+          //height: 62.6vw;
+          height: 271px;
           overflow: hidden;
           margin: 0.5em 16px 0;
 
           ::ng-deep .owl-carousel {
-
             .owl-prev,
             .owl-next {
               position: absolute;
               top: 50%;
-              display: block !important;
+              //display: block !important;
+              display: flex;
               width: 14px;
-              height: 100px;
+              height: 24px;
               background-color: transparent;
               border: 0 solid black;
               transform: translateY(-50%);
@@ -982,7 +983,7 @@ div.plandtl {
               background: $color-gry06;
 
               img {
-                height: 75vw;
+                height: 62.6vw;
                 object-fit: cover;
                 @include copy-protect;
               }
@@ -995,7 +996,7 @@ div.plandtl {
             background: $color-gry06;
 
             img {
-              height: 75vw;
+              height: 69vw;
               object-fit: cover;
               @include copy-protect;
             }
