--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -730,10 +730,10 @@ div.plandtl {
       .spotinfo {
         .card-box {
           .spot-image {
-            height: 307px !important;
+            height: 348px !important;
 
             .thumbmain {
-              height: 307px;
+              height: 348px;
 
               img {
                 height: auto !important;
@@ -928,7 +928,7 @@ div.plandtl {
 
         .spot-image {
           position: relative;
-          //height: 62.6vw;
+          height: 62.6vw;
           height: 271px;
           overflow: hidden;
           margin: 0.5em 16px 0;
@@ -1076,8 +1076,6 @@ div.plandtl {
           }
 
         }
-
-        //.spot-image
 
         .spot-overview {
           padding: 21px 12px 0;
