--- a/src/app/pages/mypage-planlist/mypage-planlist.component.html
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.html
@@ -1,62 +1,53 @@
-<!-- マイページプラン一覧 -->
-<div class="box"
-infinite-scroll
-[infiniteScrollDistance]="5"
-[infiniteScrollUpDistance]="1.5"
-[infiniteScrollThrottle]="100"
-[infiniteScrollContainer]="box"
-[scrollWindow]="isMobile?true:false"
-[fromRoot]="isMobile?false:true"
-(scrolled)="onScrollDown()">
-  <ng-container *ngFor="let row of details$">
-    <mat-card>
-      <mat-card-content>
-        <div class="card-box">
-          <mat-list>
-            <mat-list-item class="top">
-              <div class="lt">
-                <div class="areaName">{{ row.areaName | langFilter: lang }}</div>
-                <div class='update'>{{ "LastUpdated" | translate }} : {{ row.updateDatetime | date:"yyyy/MM/dd" }}</div>
-              </div>
-              <div class="rt">
-                <div class="release" (click)="onClickRelease(row)">
-                  <img *ngIf="row.isRelease" src="../../../assets/img/sw_release_on.svg" alt="">
-                  <img *ngIf="!row.isRelease" src="../../../assets/img/sw_release_off.svg" alt="">
+<ng-container *ngIf="details$?.length>0; else noPlan">
+  <!-- マイページプラン一覧 -->
+  <div class="box" infinite-scroll [infiniteScrollDistance]="5" [infiniteScrollUpDistance]="1.5"
+    [infiniteScrollThrottle]="100" [infiniteScrollContainer]="box" [scrollWindow]="isMobile?true:false"
+    [fromRoot]="isMobile?false:true" (scrolled)="onScrollDown()">
+    <ng-container *ngFor="let row of details$">
+      <mat-card>
+        <mat-card-content>
+          <div class="card-box">
+            <mat-list>
+              <mat-list-item class="top">
+                <div class="lt">
+                  <div class="areaName">{{ row.areaName | langFilter: lang }}</div>
+                  <div class='update'>{{ "LastUpdated" | translate }} : {{ row.updateDatetime | date:"yyyy/MM/dd" }}
+                  </div>
                 </div>
-                <div class="delete">
-                  <button class="deletePlan" (click)="onClickDeletePlan(row)">
-                    <i class="material-icons">clear</i>
-                  </button>
+                <div class="rt">
+                  <div class="release" (click)="onClickRelease(row)">
+                    <img *ngIf="row.isRelease" src="../../../assets/img/sw_release_on.svg" alt="">
+                    <img *ngIf="!row.isRelease" src="../../../assets/img/sw_release_off.svg" alt="">
+                  </div>
+                  <div class="delete">
+                    <button class="deletePlan" (click)="onClickDeletePlan(row)">
+                      <i class="material-icons">clear</i>
+                    </button>
+                  </div>
                 </div>
-              </div>
-            </mat-list-item>
-            <mat-list-item class="planname">
-              <span>{{ row.planName }}</span>
-            </mat-list-item>
-            <mat-list-item class="timereq">
-              <span *ngIf="row.timeRequiredHour !== '0'"
-                >{{ "TimeRequired" | translate }}：{{ row.timeRequiredHour }}{{ "Hour" | translate }}</span>
-              <span *ngIf="row.timeRequiredMin !== '0'"
-                >{{ row.timeRequiredMin }}{{ "Minute" | translate }}</span>
-              <span class="spotqty">
-                {{ "NumberOfSpots" | translate }} : {{ row.spots?.length }}
-              </span>
-            </mat-list-item>
-          </mat-list>
+              </mat-list-item>
+              <mat-list-item class="planname">
+                <span>{{ row.planName }}</span>
+              </mat-list-item>
+              <mat-list-item class="timereq">
+                <span
+                  *ngIf="row.timeRequiredHour !== '0'">{{ "TimeRequired" | translate }}：{{ row.timeRequiredHour }}{{ "Hour" | translate }}</span>
+                <span *ngIf="row.timeRequiredMin !== '0'">{{ row.timeRequiredMin }}{{ "Minute" | translate }}</span>
+                <span class="spotqty">
+                  {{ "NumberOfSpots" | translate }} : {{ row.spots?.length }}
+                </span>
+              </mat-list-item>
+            </mat-list>
 
-          <owl-carousel-o class="pics" [options]="customOptions">
-            <ng-container *ngFor="let item of row.spots; index as i">
-              <ng-template carouselSlide id="i+1">
+            <owl-carousel-o class="pics" [options]="customOptions">
+              <ng-container *ngFor="let item of row.spots; index as i">
+                <ng-template carouselSlide id="i+1">
                   <div class="thumbspots" (click)="linktoSpot(item)">
                     <div class="thumbnum">
                       <span>{{ i + 1 }}</span>
                     </div>
-                    <img
-                      *ngIf="item.pictures && item.pictures.length > 0"
-                      [src]="item.pictures[0]"
-                      [alt]="item.spotId"
-                      [title]="item.spotId"
-                    />
+                    <img *ngIf="item.pictures && item.pictures.length > 0" [src]="item.pictures[0]" [alt]="item.spotId"
+                      [title]="item.spotId" />
                   </div>
                   <div class="thumbname" (click)="linktoSpot(item)">
                     <!-- 掲載OK -->
@@ -66,32 +57,34 @@ infinite-scroll
                     <!-- 掲載終了スポットの場合 -->
                     <span *ngIf="item.isEndOfPublication">{{ "EndOfPublication" | translate }}</span>
                   </div>
-              </ng-template>
-            </ng-container>
-          </owl-carousel-o>
-          <mat-list>
-            <mat-list-item class="row bottom">
-              <!-- URL共有 -->
-              <div class="share">
-                <button mat-flat-button class="share" id="planshare" (click)="onClickSharePlan(row)">
-                  <mat-icon>share</mat-icon>
-                  {{ "SharePlan" | translate }}
+                </ng-template>
+              </ng-container>
+            </owl-carousel-o>
+            <mat-list>
+              <mat-list-item class="row bottom">
+                <!-- URL共有 -->
+                <div class="share">
+                  <button mat-flat-button class="share" id="planshare" (click)="onClickSharePlan(row)">
+                    <mat-icon>share</mat-icon>
+                    {{ "SharePlan" | translate }}
+                  </button>
+                </div>
+                <button mat-flat-button class="edit-to-plan" (click)="onClickEditPlan(row)">
+                  {{ "EditPlan" | translate }}
                 </button>
-              </div>
-              <button mat-flat-button class="edit-to-plan" (click)="onClickEditPlan(row)">
-                {{ "EditPlan" | translate }}
-              </button>
-            </mat-list-item>
-          </mat-list>
+              </mat-list-item>
+            </mat-list>
 
-        </div>
-      </mat-card-content>
-    </mat-card>
-  </ng-container>
-</div>
-
-<!--pagination-controls
-  (pageChange)="p = $event; pageChange()"
-  previousLabel="{{ 'Previous' | translate }}"
-  nextLabel="{{ 'Next' | translate }}"
-></pagination-controls-->
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </ng-container>
+  </div>
+</ng-container>
+<ng-template #noPlan>
+  <mat-card id="noPlan">
+    <mat-card-content>
+      <p>{{"NoPlanMsg"|translate}}</p>
+    </mat-card-content>
+  </mat-card>
+</ng-template>
