--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -8,6 +8,15 @@
 //   src: url(../../../assets/icons/material-icon.woff2) format("woff2");
 // }
 
+#noPlan{
+  p{
+    border: $color-gry07 solid 1px;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+  }
+}
+
 .search {
   background: transparent;
   font-size: 16px;
