--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
@@ -139,13 +139,18 @@
       <mat-list>
         <!-- メールアドレス -->
         <mat-list-item>
-          <mat-form-field appearance="outline">
-            <mat-label>{{ "EMail" | translate }}</mat-label>
-            <input
-            matInput
-            formControlName="email"
-            />
-          </mat-form-field>
+          <ng-container *ngIf="email.value;else noem" >
+            <mat-form-field appearance="outline">
+              <mat-label>{{ "EMail" | translate }}</mat-label>
+              <input
+              matInput
+              formControlName="email"
+              />
+            </mat-form-field>
+          </ng-container>
+          <ng-template #noem>
+
+          </ng-template>
         </mat-list-item>
         <!-- パスワード -->
         <mat-list-item class="pw">
