--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,12 +26,12 @@
   background-color: #fff;
 }
 
-.custom-snackbar{
+.custom-snackbar {
   margin: auto !important;
   position: absolute;
-  top:50%;
-  width: 93%!important;
+  top: 10px;
+  width: 91% !important;
   right: 0;
   left: 0;
-  background-color: #4A4A4A;
+  //background-color: #4A4A4A;
 }
